GNOME Bugzilla – Bug 696733
Leak in socket-adaptor
Last modified: 2013-03-28 10:43:40 UTC
==16774== 108 bytes in 3 blocks are definitely lost in loss record 7,504 of 9,258 ==16774== at 0x4A0887C: malloc (vg_replace_malloc.c:270) ==16774== by 0x7FA378A: g_malloc (gmem.c:159) ==16774== by 0x7FA3AB5: g_malloc_n (gmem.c:400) ==16774== by 0x7FBEE58: g_strconcat (gstrfuncs.c:589) ==16774== by 0x70198DB: impl_Embedded (socket-adaptor.c:179) ==16774== by 0x700FA98: handle_other (droute.c:539) ==16774== by 0x700FC39: handle_message (droute.c:586) ==16774== by 0x3C6A81D9C4: _dbus_object_tree_dispatch_and_unlock (dbus-object-tree.c:862) ==16774== by 0x3C6A80FC1F: dbus_connection_dispatch (dbus-connection.c:4672) ==16774== by 0x80A5FA2: message_queue_dispatch (atspi-gmain.c:97) ==16774== by 0x7F9B414: g_main_dispatch (gmain.c:3054) ==16774== by 0x7F9C179: g_main_context_dispatch (gmain.c:3630) ==16774== by 0x7F9C369: g_main_context_iterate (gmain.c:3701) ==16774== by 0x7F9C799: g_main_loop_run (gmain.c:3895) ==16774== by 0x56A1EA3: WebProcessMainGtk (in /home/xan/gnome/lib64/libwebkit2gtk-3.0.so.22.2.0) ==16774== by 0x3C65021A04: (below main) (libc-start.c:225)
Created attachment 239989 [details] [review] 0001-socket-adaptor-fix-memory-leak.patch This should do the trick, and simplifies the code a bit.
Comment on attachment 239989 [details] [review] 0001-socket-adaptor-fix-memory-leak.patch Committed to head and gnome-3-8. Thanks for the patch.