socket-adaptor: fix memory leak

Set a destructor for the object data. Other than fixing a leak this
also allows to simplify the code a bit.

https://bugzilla.gnome.org/show_bug.cgi?id=696733